<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SignalWatcher</string>
    <string name="title_home">Home</string>
    <string name="title_wifi">WiFi</string>
    <string name="title_notifications">Notifications</string>


    <string name="tv_label_cid">Cell ID</string>
    <string name="tv_label_lac">Location Area Code</string>
    <string name="tv_label_cell_location">Cell Location</string>
    <string name="tv_label_singal_strength">Signal Strength</string>
    <string name="tv_label_service_state">Service State</string>

    <string name="format_singal_strength"><xliff:g id="strength">%1$s</xliff:g> dBm</string>
    <string name="format_singal_strength_wifi">Signal Strength: <xliff:g id="strength">%1$s</xliff:g> dBm</string>
    <string name="format_MAC_address">MAC: <xliff:g id="address">%1$s</xliff:g></string>

    <string name="cd_list_icon">WiFi strength icon</string>


</resources>
