<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="cell.signalwatcher.ui.CellSignalFragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvLabelLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_label_cell_location"
            app:layout_constraintBottom_toTopOf="@+id/topGuideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/verGuidelineLeft"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.504"/>

        <TextView
            android:id="@+id/tvLabelSingalStr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_label_singal_strength"
            app:layout_constraintBottom_toTopOf="@+id/middleGuideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/verGuidelineLeft"
            app:layout_constraintTop_toTopOf="@+id/topGuideline"
            app:layout_constraintVertical_bias="0.503"/>

        <TextView
            android:id="@+id/tvLabelServiceSt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_label_service_state"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/verGuidelineLeft"
            app:layout_constraintTop_toTopOf="@+id/middleGuideline"
            app:layout_constraintVertical_bias="0.507"/>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.31"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

        <View
            android:layout_width="368dp"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.366"/>

        <View
            android:layout_width="368dp"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.665"/>

        <android.support.constraint.Guideline
            android:id="@+id/topGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="148dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="229dp"/>

        <android.support.constraint.Guideline
            android:id="@+id/middleGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="338dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="419dp"/>

        <android.support.constraint.Guideline
            android:id="@+id/verGuidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="111dp"
            tools:layout_editor_absoluteX="111dp"
            tools:layout_editor_absoluteY="81dp"/>

        <TextView
            android:id="@+id/tvCid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/tvLac"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.569"/>

        <TextView
            android:id="@+id/tvLac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/topGuideline"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tvSignalStr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/middleGuideline"
            app:layout_constraintHorizontal_bias="0.189"
            app:layout_constraintLeft_toLeftOf="@+id/verGuidelineLeft"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/topGuideline"
            app:layout_constraintVertical_bias="0.503"/>

        <TextView
            android:id="@+id/tvServiceSt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.189"
            app:layout_constraintLeft_toLeftOf="@+id/verGuidelineLeft"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/middleGuideline"
            app:layout_constraintVertical_bias="0.507"/>

        <TextView
            android:id="@+id/tvLabelCid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="49dp"
            android:text="@string/tv_label_cid"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintLeft_toLeftOf="@+id/verGuidelineLeft"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvLabelLac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_label_lac"
            app:layout_constraintBottom_toTopOf="@+id/topGuideline"
            app:layout_constraintHorizontal_bias="0.446"
            app:layout_constraintLeft_toLeftOf="@+id/verGuidelineLeft"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelCid"
            app:layout_constraintVertical_bias="0.653"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="267dp"
            tools:layout_editor_absoluteX="267dp"
            tools:layout_editor_absoluteY="81dp"/>

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
